--- a/wp-content/themes/new-school/src/markup/blocks/slider/slider.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/slider/slider.scss
@@ -78,4 +78,55 @@
       line-height: 1em;
     }
   }
+
+}
+
+
+.tns-outer {
+  position: relative;
+}
+
+.tns-controls {
+  position: static;
+}
+
+.tns-controls button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background: var(--blue-color);
+  bottom: 10px;
+  color: transparent;
+  z-index: 10;
+  border: 1px solid white;
+
+  &:after {
+    @include pseudo-absolute;
+    width: 12px;
+    height: 7px;
+    left: 8px;
+    top: 11px;
+    background: white;
+    mask: url(../../../../images/arrow-down.svg);
+    -webkit-mask: url(../../../../images/arrow-down.svg);
+    @include mask-contain-center;
+    transform-origin: center;
+  }
+
+  &:nth-of-type(1) {
+    left: 10px;
+  }
+
+  &:nth-of-type(1):after {
+    transform: rotate(90deg);
+  }
+
+  &:nth-last-of-type(1) {
+    right: 10px;
+  }
+
+  &:nth-last-of-type(1):after {
+    transform: rotate(-90deg);
+  }
 }
