--- a/wp-content/themes/new-school/src/markup/blocks/group-numbers/group-numbers.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/group-numbers/group-numbers.scss
@@ -20,8 +20,8 @@
   }
 
   &__items {
-    display: grid;
-    grid-gap: 20px;
+    //display: grid;
+    //grid-gap: 20px;
 
     &--1 {
       grid-template-columns: repeat(1, 1fr)
@@ -71,9 +71,16 @@
   }
 
   &__item {
+
+  }
+
+  &__item-inner {
     box-shadow: 0 0 13px -4px rgba(0, 0, 0, .3);
     text-align: center;
-    padding: 15px;
+    margin: 15px;
+    height: 220px;
+    padding: 5px;
+    @include flex-column-center;
 
     @include tablet-big-screen {
       padding: 5px;
