--- a/wp-content/themes/new-school/src/markup/blocks/img-block/img-block.scss
+++ b/wp-content/themes/new-school/src/markup/blocks/img-block/img-block.scss
@@ -83,6 +83,7 @@
     @include tablet-big-screen {
       padding: 10px 20px;
       font-size: 18px;
+      bottom: -22px;
       right: 0;
     }
 
